--- a/config/.config/picom/picom.conf
+++ b/config/.config/picom/picom.conf
@@ -104,4 +104,6 @@ opacity-rule = [
   "70:class_g = 'Terminator' && !focused",
   "90:class_g = 'Bitwarden' && focused",
   "70:class_g = 'Bitwarden' && !focused",
+  "90:class_g = 'Discord' && focused",
+  "70:class_g = 'Discord' && !focused",
 ];
