--- a/config/.config/tmux/tmux.conf
+++ b/config/.config/tmux/tmux.conf
@@ -20,3 +20,7 @@ bind j select-pane -D
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
+
+# bind killing window to k
+bind k confirm kill-window
+
