more tmux config

--- a/config/.config/tmux/tmux.conf
+++ b/config/.config/tmux/tmux.conf
@@ -3,6 +3,10 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+# Automatically set window title
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
 # split panes using | and -
 bind | split-window -h
 bind - split-window -v
@@ -17,9 +21,32 @@ bind h select-pane -L
 bind l select-pane -R
 bind k select-pane -U
 bind j select-pane -D
+# Resize pane by 5 unit
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
+# Set index for first pane
+set -g base-index 1
+
+# This is to show the status line at the bottom
+# --------------------  
+# Keep in mind the status bar is only available in tmux/screen
+# ZSH shell itself does not have this functionality
+# --------------------  
+
+
+set -g status on
+set -g @plugin 'jimeh/tmux-themepack'
+set -g @themepack 'powerline/block/blue'
+
+set -g default-terminal "screen-256color"
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
 
 # bind killing window to k
 bind k confirm kill-window
