--- a/config/.config/ranger/rc.conf
+++ b/config/.config/ranger/rc.conf
@@ -63,7 +63,8 @@ set automatically_count_files true
 set open_all_images true
 
 # Be aware of version control systems and display information.
-set vcs_aware false
+# set vcs_aware false
+set vcs_aware true
 
 # State of the four backends git, hg, bzr, svn. The possible states are
 # disabled, local (only show local info), enabled (show local and remote
@@ -120,7 +121,8 @@ set vcs_msg_length 50
 #   Preview images in full color with the external command "ueberzug".
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
-set preview_images_method w3m
+# set preview_images_method w3m
+set preview_images_method ueberzug
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
@@ -145,7 +147,8 @@ set show_hidden_bookmarks true
 
 # Which colorscheme to use?  These colorschemes are available by default:
 # default, jungle, snow, solarized
-set colorscheme default
+# set colorscheme default
+set colorscheme zenburn
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
