add picom config for termite and turn on numLock on login

--- a/config/.config/picom/picom.conf
+++ b/config/.config/picom/picom.conf
@@ -100,8 +100,8 @@ wintypes: {
 xrender-sync-fence = true;
 
 opacity-rule = [
-  "90:class_g = 'st' && focused",
-  "70:class_g = 'st' && !focused",
+  "90:class_g = 'Termite' && focused",
+  "70:class_g = 'Termite' && !focused",
   "90:class_g = 'Bitwarden' && focused",
   "70:class_g = 'Bitwarden' && !focused",
   "90:class_g = 'Discord' && focused",
