--- a/config/.config/i3/config
+++ b/config/.config/i3/config
@@ -40,7 +40,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec st 
+bindsym $mod+Return exec termite
 
 # kill focused window
 # bindsym $mod+Shift+q kill
