replace plaintext api key with gpg encrypted api key

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,17 @@ config/.config/nvim/.netrwhist
 config/.config/karabiner/automatic_backups/
 __pycache__
 config/.config/coc/
+**/secrets.txt
 config/.config/configstore/
-config/.config/emacs/elpa
-config/.config/emacs/eshell
-config/.config/emacs/auto-save-list
-config/.config/emacs/url
-config/.config/emacs/.cache
+config/.config/zsh/.zsh_sessions/**
+config/.config/zsh/.zsh_history
+config/.config/zsh/.zcompdump
+config/.config/zsh/.zshrc.backup
 util/cpu_usage/target/
 util/openweather/bin/
 util/openweather/*.log
 util/openweather/include
 util/openweather/lib
+config/.config/emacs/**
+!config/.config/emacs/init.el
+!config/.config/emacs/init.org
