--- a/config/.config/neofetch/config.conf
+++ b/config/.config/neofetch/config.conf
@@ -679,7 +679,7 @@ disk_display="off"
 # Values:   'ascii', 'caca', 'chafa', 'jp2a', 'iterm2', 'off',
 #           'termpix', 'pixterm', 'tycat', 'w3m', 'kitty'
 # Flag:     --backend
-image_backend="w3m"
+image_backend="ascii"
 
 # Image Source
 #
@@ -693,7 +693,7 @@ image_backend="w3m"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="$HOME/Dotfiles/config/.config/neofetch/neofetch.jpg"
+image_source="$HOME/Dotfiles/config/.config/neofetch/ascii.txt"
 
 
 # Ascii Options
