--- a/config/.config/ranger/rc.conf
+++ b/config/.config/ranger/rc.conf
@@ -122,7 +122,7 @@ set vcs_msg_length 50
 #   Images are shown by using a child window.
 #   Only for users who run X11 in GNU/Linux.
 # set preview_images_method w3m
-set preview_images_method ueberzug
+set preview_images_method w3m
 
 # Delay in seconds before displaying an image with the w3m method.
 # Increase it in case of experiencing display corruption.
