tweak picom and give up on making neofetch display image

--- a/config/.config/picom/picom.conf
+++ b/config/.config/picom/picom.conf
@@ -104,10 +104,12 @@ opacity-rule = [
   "70:class_g = 'Termite' && !focused",
   "90:class_g = 'Bitwarden' && focused",
   "70:class_g = 'Bitwarden' && !focused",
-  "90:class_g = 'Discord' && focused",
-  "70:class_g = 'Discord' && !focused",
+  "90:class_g = 'discord' && focused",
+  "70:class_g = 'discord' && !focused",
   "90:class_g = 'Alacritty' && focused",
   "70:class_g = 'Alacritty' && !focused",
   "90:class_g = 'Emacs' && focused",
   "70:class_g = 'Emacs' && !focused",
+  "90:class_g = 'firefox' && focused",
+  "70:class_g = 'firefox' && !focused",
 ];
