--- a/config/.config/neofetch/config.conf
+++ b/config/.config/neofetch/config.conf
@@ -693,7 +693,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="$HOME/Dotfiles/config/.config/neofetch/ascii.txt"
+image_source="./ascii.txt"
 
 
 # Ascii Options
