--- a/config/.config/tmux/tmux.conf
+++ b/config/.config/tmux/tmux.conf
@@ -14,18 +14,26 @@ unbind '"'
 unbind %
 
 # reload config file (change file location to your the tmux.conf you want to use)
-bind r source-file ${HOME}/.config/tmux/tmux.conf
+# bind r source-file ${HOME}/.config/tmux/tmux.conf
 
 # switch panes using Leader-Vim 
 bind h select-pane -L
 bind l select-pane -R
 bind k select-pane -U
 bind j select-pane -D
+
 # Resize pane by 5 unit
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
 bind-key L resize-pane -R 5
+bind-key x confirm kill-window
+
+# Sync keystroke to all panes
+bind-key S setw synchronize-panes
+
+# Rename current session
+bind-key r command-prompt "rename-session '%%'"
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
@@ -38,7 +46,6 @@ set -g base-index 1
 # ZSH shell itself does not have this functionality
 # --------------------  
 
-
 set -g status on
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @themepack 'powerline/block/blue'
@@ -47,7 +54,4 @@ set -g default-terminal "screen-256color"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
-
-# bind killing window to k
-bind k confirm kill-window
 
